--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am nidhi and this is my webapp.
+            Hi! I am nidhi sharma, programmer and this is my webapp.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
