[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am nidhi sharma and this is my webapp.
+            Hi! I am nidhi sharma and this is my first webapp.
    <h4> Here our changes go </h4>       
  </div>
         <script type="text/javascript" src="/ui/main.js">
