--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,3 +1,27 @@
 <html>
-
+ <head>
+  <title>
+     Article One | Nidhi Sharma
+     </title>
+ </head>
+ <body>
+     <div>
+         <a href="/">home</a>
+     </div>
+     <hr/>
+     <h3>
+         Article one
+     </h3>
+     <div>
+         <p >
+             This is the contect for my first article This is the contect for my first article This is the contect for my first article This is the contect for my first article This is the contect for my first article This is the contect for my first article 
+         </p>
+         <p>
+             This is the contect for my first article This is the contect for my first article This is the contect for my first article This is the contect for my first article This is the contect for my first article This is the contect for my first article 
+         </p>
+         <p>
+             This is the contect for my first article This is the contect for my first article This is the contect for my first article This is the contect for my first article This is the contect for my first article This is the contect for my first article 
+         </p>
+     </div>
+ </body>
 </html>
