[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -13,7 +13,10 @@
          Article one
      </h3>
      <div>
-         <p >
+         5 sep,2016
+     </div>
+     <div>
+         <p>
              This is the contect for my first article This is the contect for my first article This is the contect for my first article This is the contect for my first article This is the contect for my first article This is the contect for my first article 
          </p>
          <p>
