[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,9 +3,19 @@
   <title>
      Article One | Nidhi Sharma
      </title>
+     <style>
+     .container {
+         max width: 800px;
+         margin: 0 auto;
+         colour: grey;
+         font-family: sans-serif;
+     }
+     </style>
+     
  </head>
  <body>
-     <div>
+     <div class="container">
+       <div>
          <a href="/">home</a>
      </div>
      <hr/>
@@ -25,6 +35,7 @@
          <p>
              This is the contect for my first article This is the contect for my first article This is the contect for my first article This is the contect for my first article This is the contect for my first article This is the contect for my first article 
          </p>
+     </div>
      </div>
  </body>
 </html>
