[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,17 +5,16 @@
      </title>
      <style>
      .container {
-         max width: 800px;
+         max-width: 800px;
          margin: 0 auto;
-         colour: grey;
+         color: grey;
          font-family: sans-serif;
      }
      </style>
-     
  </head>
  <body>
      <div class="container">
-       <div>
+         <div>
          <a href="/">home</a>
      </div>
      <hr/>
@@ -36,6 +35,6 @@
              This is the contect for my first article This is the contect for my first article This is the contect for my first article This is the contect for my first article This is the contect for my first article This is the contect for my first article 
          </p>
      </div>
-     </div>
+</div>
  </body>
 </html>
