[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -3,8 +3,20 @@
   <title>
      Article two | Nidhi Sharma
      </title>
+     <style>
+     .container {
+             max-width: 800px;
+             margin: 0 auto;
+             color: grey;
+             font-family: sans-serif;
+             padding-top: 60px;
+             padding-left: 20px;
+             padding-right: 20px;
+     }
+     </style>
  </head>
  <body>
+     <div class="container">
      <div>
          <a href="/">home</a>
      </div>
@@ -21,6 +33,7 @@
              This is the contect for my second  article
          </p>
          
+     </div>
      </div>
  </body>
 </html>
