--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -3,8 +3,20 @@
   <title>
      Article three | Nidhi Sharma
      </title>
+     <style>
+     .container {
+             max-width: 800px;
+             margin: 0 auto;
+             color: grey;
+             font-family: sans-serif;
+             padding-top: 60px;
+             padding-left: 20px;
+             padding-right: 20px;
+     }
+     </style>
  </head>
  <body>
+     <div class="container">
      <div>
          <a href="/">home</a>
      </div>
@@ -19,7 +31,7 @@
          <p>
              This is the contect for my third article 
          </p>
-         
+        </div> 
      </div>
  </body>
 </html>
