--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -3,18 +3,8 @@
   <title>
      Article three | Nidhi Sharma
      </title>
-     <style>
-     .container {
-             max-width: 800px;
-             margin: 0 auto;
-             color: grey;
-             font-family: sans-serif;
-             padding-top: 60px;
-             padding-left: 20px;
-             padding-right: 20px;
-     }
-     </style>
- </head>
+     <link href="/ui/style.css" rel="stylesheet" />
+      </head>
  <body>
      <div class="container">
      <div>
