--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,7 +6,7 @@
      <link href="/ui/style.css" rel="stylesheet" />
  </head>
  <body>
-     <div class="container">
+     <div >
          <div>
          <a href="/">home</a>
      </div>
