[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,6 +12,10 @@
             Hi! I am nidhi sharma and this is my  webapp.
    <h4> Here our changes go </h4>       
  </div>
+ <script>
+     
+    alert('hi I\'m java script');
+ </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
