[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,18 +4,16 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class="container">
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="http://webneel.com/daily/sites/default/files/images/daily/03-2014/28-3d-girl-cartoon.jpg" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
             Hi! I am nidhi sharma and this is my  webapp.
    <h4> Here our changes go </h4>       
  </div>
- <script>
-     
-    alert('hi I\'m java script');
- </script>
+ </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
