--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
             <img src="http://webneel.com/daily/sites/default/files/images/daily/03-2014/28-3d-girl-cartoon.jpg" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div class="center text-big bold" id='main-text'>
             Hi! I am nidhi sharma and this is my  webapp.
    <h4> Here our changes go </h4>       
  </div>
