--- a/ui/index.html
+++ b/ui/index.html
@@ -5,8 +5,8 @@
     </head>
     <body>
         <div class="container">
-        <div id='girl' class="center">
-            <img src="http://webneel.com/daily/sites/default/files/images/daily/03-2014/28-3d-girl-cartoon.jpg" class="img-medium"/>
+        <div  class="center">
+            <img id='girl' src="http://webneel.com/daily/sites/default/files/images/daily/03-2014/28-3d-girl-cartoon.jpg" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold" id='main-text'>
