--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class="container">
         <div  class="center">
-            <img id='girl' src="http://webneel.com/daily/sites/default/files/images/daily/03-2014/28-3d-girl-cartoon.jpg" class="img-medium"/>
+            <img id='madi' src="http://webneel.com/daily/sites/default/files/images/daily/03-2014/28-3d-girl-cartoon.jpg" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold" id='main-text'>
