--- a/ui/index.html
+++ b/ui/index.html
@@ -4,6 +4,7 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div id='wrapper'>
         <div class="container">
         <div  class="center">
             <img id='madi' src="http://webneel.com/daily/sites/default/files/images/daily/03-2014/28-3d-girl-cartoon.jpg" class="img-medium"/>
@@ -12,6 +13,7 @@
         <div class="center text-big bold" id='main-text'>
             Hi! I am nidhi sharma and this is my  webapp.
    <h4> Here our changes go </h4>       
+ </div>
  </div>
  </div>
         <script type="text/javascript" src="/ui/main.js">
