--- a/ui/index.html
+++ b/ui/index.html
@@ -15,6 +15,10 @@
    <h4> Here our changes go </h4>       
  </div>
  </div>
+ <div class="footer">
+     This button <button id="counter"> Click me!</button>has been clicked 0 times.
+ </div>
+ 
  </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
