--- a/ui/index.html
+++ b/ui/index.html
@@ -16,7 +16,7 @@
  </div>
  </div>
  <div class="footer">
-     This button <button id="counter"> Click me!</button>has been clicked 0 times.
+     This button <button id="counter"> Click me!</button>has been clicked <span id="count">0</span> times.
  </div>
  
  </div>
