--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="http://logos.textgiraffe.com/logos/logo-name/Imad-designstyle-kiddo-m.png" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
