--- a/ui/index.html
+++ b/ui/index.html
@@ -5,12 +5,14 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div id="wrapper">
         <div class="center">
             <img src="http://logos.textgiraffe.com/logos/logo-name/Imad-designstyle-kiddo-m.png" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
             Hi! I am your webapp.
+        </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
