--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,11 @@
         <div id="wrapper">
         <div class="center">
             <img src="http://logos.textgiraffe.com/logos/logo-name/Imad-designstyle-kiddo-m.png" class="img-medium"/>
-        </div>
+            
+            </div>
+         <hr>
+         <img src=" https://pbs.twimg.com/profile_images/651762731822022660/oGv4mvWb.png" class="img-medium"/>
+            
         <br>
         <div class="center text-big bold">
             Hi! I am your webapp.
