[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,8 +11,9 @@
             
             </div>
          <hr>
+         <div hr="center">
          <img src=" https://pbs.twimg.com/profile_images/651762731822022660/oGv4mvWb.png" class="img-medium"/>
-            
+           </div> 
         <br>
         <div class="center text-big bold">
             Hi! I am your webapp.
