[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
             
             </div>
          <hr>
-         <div hr="center">
+         <div class="center">
          <img src=" https://pbs.twimg.com/profile_images/651762731822022660/oGv4mvWb.png" class="img-medium"/>
            </div> 
         <br>
