--- a/ui/index.html
+++ b/ui/index.html
@@ -16,7 +16,7 @@
            </div> 
         <br>
         <div class="center text-big bold">
-            Hi! I am your webapp.
+            Hi! this is my first webapp.
         </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
