--- a/ui/index.html
+++ b/ui/index.html
@@ -18,6 +18,9 @@
         <div class="center text-big bold">
             Hi! this is my first webapp.
         </div>
+        <div class="footer">
+            this button <button id="button">click me!</button>has been clicked<span>0</span>times.
+        </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
