--- a/ui/index.html
+++ b/ui/index.html
@@ -6,12 +6,12 @@
     </head>
     <body>
         <div id="wrapper">
-        <div class="center">
+        <div id="imad" class="center">
             <img src="http://logos.textgiraffe.com/logos/logo-name/Imad-designstyle-kiddo-m.png" class="img-medium"/>
             
             </div>
          <hr>
-         <div class="center">
+         <div id="girl" class="center">
          <img src=" https://pbs.twimg.com/profile_images/651762731822022660/oGv4mvWb.png" class="img-medium"/>
            </div> 
         <br>
