--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div id="wrapper">
+        <div id="wrapper" class="container">
         <div id="imad" class="center">
             <img src="http://logos.textgiraffe.com/logos/logo-name/Imad-designstyle-kiddo-m.png" class="img-medium"/>
             
