--- a/ui/index.html
+++ b/ui/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
-         <link rel="shortcut icon" href=""> 
+         <link rel="favicon" href=""> 
     </head>
     <body>
         <div id="wrapper" class="container">
