--- a/ui/index.html
+++ b/ui/index.html
@@ -21,6 +21,14 @@
         </div>
         <div class="footer">
             This button <button id="counter">click me!</button>has been clicked <span id="count">0</span> times.
+            <hr>
+            <input type="text" id="name" placeholder="name"></input>
+            <input type="submit" value="Submit"></input>
+            <ul>
+                <li>name1</li>
+                <li>name1</li>
+                <li>name1</li>
+            </ul>
         </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
