--- a/ui/index.html
+++ b/ui/index.html
@@ -21,13 +21,11 @@
         </div>
         <div class="footer">
             This button <button id="counter">click me!</button>has been clicked <span id="count">0</span> times.
-            <br/>
+            <hr>
             <input type="text" id="name" placeholder="name"/>
-            <input type="submit" value="Submit"/>
-            <ul>
-                <li>name1</li>
-                <li>name1</li>
-                <li>name1</li>
+            <input type="submit" value="Submit" id="submit-btn"/>
+            <ul id="namelist">
+               
             </ul>
         </div>
         </div>
