[imad-console] Updates ui/shop.html

--- a/ui/shop.html
+++ b/ui/shop.html
@@ -2,7 +2,8 @@
   <html>
 <head>
 <title>Search Engine Title Goes Here</title>
-<link rel="stylesheet" type="text/css" href="style_shop.css">
+  <meta name="viewport" content="width-device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="/ui/style_shop.css">
 </head>
 <body>
 <div id="container"> 
@@ -55,7 +56,7 @@ alt="watch" class="img-medium"/></div>
 <div id="footer"> Footer Goes Here </div>
 </div>
 
-        <script type="text/javascript" src="main.js">
+        <script type="text/javascript" src="/ui/main.js">
         </script>
 </body>
 </html>
